--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>BBR Assignment-1</title>
     <script src="https://kit.fontawesome.com/8c752a84fa.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assignment-1.css">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- header hai -->
@@ -49,8 +50,8 @@
         <h1 class="home-heading">TOGETHER WE CAN HELP SOMEONE</h1>
         <p class="home-para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis repellat corporis optio distinctio ex beatae veniam corrupti, harum alias non! </p>
         <span>
-        <button class="home-btn">DONATE NOW</button>
-        <button class="home-btn" >LEARN MORE</button>
+        <button class="home-btn btn">DONATE NOW</button>
+        <button class="home-btn btn" >LEARN MORE</button>
     </span>
     </section>
 
@@ -132,12 +133,17 @@
     <section id="testimonials">
 <h1 class="testimonials-heading">WHAT PEOPLE SAYS</h1>
 
+<div class="review">
+    <div class="arrow"><i class="fa-solid fa-3x fa-less-than"></i></div>
 <div class="testimonials-para">
     <img src="image/testimonial.jpg" alt="wait">
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat, necessitatibus et repellat laborum quia, recusandae atque enim unde est </p>
     <p>Zafari Jamith</p>
     <p>Director</p>
+</div>
+<div class="arrow"><i class="fa-solid fa-3x fa-greater-than"></i></div>
+
 </div>
     </section>
 
@@ -183,8 +189,8 @@
                             <input type="email" placeholder="Email Address">
                         </div>
 
-                        <div>
-                            <i class="fa-solid fa-envelope"></i>
+                        <div class="btn">
+                            <i class="fa-solid fa-envelope" ></i>
                         </div>
                     </div>
                 </div>
