--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BBR Assignment-1</title>
     <script src="https://kit.fontawesome.com/8c752a84fa.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="assignment-1.css">
+    <link rel="stylesheet" href="style/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2&display=swap" rel="stylesheet">
 </head>
 <body>
