--- a/index.html
+++ b/index.html
@@ -19,10 +19,18 @@
             <a href=""><i class="fa-brands fa-instagram"></i></a>
             <a href=""><i class="fa-brands fa-twitter"></i></a>
             <a href=""><i class="fa-brands fa-whatsapp"></i></a>
+            <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href=""><i class="fa-brands fa-snapchat"></i></a>
         </div>
         <div class="contact">
         <div class="email"><i class="fa-solid fa-envelope"></i>&nbsp;&nbsp;Email: hadapradeepsingh123@gmail.com</div>
         <div class="phone"><i class="fa-solid fa-phone"></i>&nbsp;&nbsp;Phone:8619508667</div>
+        <div id="lang">
+            <select name="language" id="">
+             <option value="language">ENG</option>
+             <option value="language">HN</option>
+            </select>
+         </div>
         </div>
         </div>
        <nav class="navbar">
@@ -47,12 +55,19 @@
 
     <!--section-->
     <section id="home">
+    <div class="review">
+        <div class="arrow"><i class="fa-solid fa-2x fa-less-than"></i></div>
+    <div class="home-content">
         <h1 class="home-heading">TOGETHER WE CAN HELP SOMEONE</h1>
         <p class="home-para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis repellat corporis optio distinctio ex beatae veniam corrupti, harum alias non! </p>
         <span>
         <button class="home-btn btn">DONATE NOW</button>
         <button class="home-btn btn" >LEARN MORE</button>
     </span>
+    </div>
+    <div class="arrow"><i class="fa-solid fa-2x fa-greater-than"></i></div>
+    
+    </div>
     </section>
 
     <!-- causes -->
@@ -61,7 +76,7 @@
        <P class="causes-para">Our charity help those people who have no hope</P>
         <div class="causes">
             <div class="box">
-                <img src="image/electricity.jpg" alt="causes">
+                <img src="image/study.jpg" alt="causes">
                 <h2 class="box-heading">Children to get education</h2>
                 <p class="box-para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe! ipsum dolor sit amet consectetur adipisicing elit. Minima, odio.</p>
                 <div class="causes-btn"><button class="btn">DONATE</button>
@@ -69,7 +84,7 @@
                 </div>
             </div>
             <div class="box">
-                <img src="image/study.jpg" alt="causes">
+                <img src="image/electricity.jpg" alt="causes">
                 <h2 class="box-heading">Bring electricity</h2>
                 <p class="box-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, eveniet. ipsum dolor sit amet consectetur adipisicing elit. Minima, odio.</p>
                 <div class="causes-btn">
@@ -134,7 +149,7 @@
 <h1 class="testimonials-heading">WHAT PEOPLE SAYS</h1>
 
 <div class="review">
-    <div class="arrow"><i class="fa-solid fa-3x fa-less-than"></i></div>
+    <div class="arrow1"><i class="fa-solid fa-3x fa-less-than"></i></div>
 <div class="testimonials-para">
     <img src="image/testimonial.jpg" alt="wait">
     <hr>
@@ -142,7 +157,7 @@
     <p>Zafari Jamith</p>
     <p>Director</p>
 </div>
-<div class="arrow"><i class="fa-solid fa-3x fa-greater-than"></i></div>
+<div class="arrow2"><i class="fa-solid fa-3x fa-greater-than"></i></div>
 
 </div>
     </section>
